--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "private": true,
     "dependencies": {
         "aws-sdk": "^2.783.0",
+        "chai": "^4.2.0",
         "dynamodb-doc": "^1.0.0",
-        "googleapis": "^39.2.0"
+        "fs": "0.0.1-security",
+        "googleapis": "^39.2.0",
+        "mocha": "^8.2.1"
     },
     "devDependencies": {
         "jest": "^24.7.1"
     },
     "scripts": {
-        "test": "jest"
+        "test": "mocha __tests__/unit/handlers/test.js"
     }
 }
