--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-    "name": "replaced-by-user-input",
-    "description": "replaced-by-user-input",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "as": "^0.4.1",
-        "aws-sdk": "^2.783.0",
-        "chai": "^4.2.0",
-        "chai-as-promised": "^7.1.1",
-        "dynamodb-doc": "^1.0.0",
-        "googleapis": "^39.2.0",
-        "mocha": "^8.2.1",
-        "promised": "^0.2.2",
-        "sinon": "^9.2.2"
-    },
-    "devDependencies": {
-        "jest": "^24.7.1"
-    },
-    "scripts": {
-        "test": "mocha __tests__/unit/handlers/test.js"
-    }
+  "name": "replaced-by-user-input",
+  "description": "replaced-by-user-input",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "as": "^0.4.1",
+    "aws-sdk": "^2.783.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "dynamodb-doc": "^1.0.0",
+    "googleapis": "^39.2.0",
+    "mocha": "^8.2.1",
+    "promised": "^0.2.2",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.2.2"
+  },
+  "devDependencies": {
+    "jest": "^24.7.1"
+  },
+  "scripts": {
+    "test": "mocha __tests__/unit/handlers/test.js"
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nabby12/lambda_InsertDynamoDb.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Nabby12/lambda_InsertDynamoDb/issues"
+  },
+  "homepage": "https://github.com/Nabby12/lambda_InsertDynamoDb#readme"
 }
